# python_network

./: pyproject.toml
network/: test.py  test2.py
