[project]
name = "network"
version = "0.1.0"
description = ""
authors = [
    {name = "symbbad",email = "symbbad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "scapy (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
